# task-candidate

./: Makefile  README.md  app.py  cli.py  config.py  main.py  pyproject.toml
.github/workflows/: workflow.yml
algorithm/: strategy_mapping.py  validation.py
algorithm/strategies/: __init__.py  base.py  brute_force.py  sorting.py  subtraction.py
input/: exceptions.py  parser.py  validator.py
output/: converter.py
storage/: exceptions.py  file_format.py  file_type.py  file_type_mapping.py
storage/base/: __init__.py  converter.py  parser.py  reader.py  type.py  writer.py
storage/txt/: __init__.py  converter.py  parser.py  reader.py  writer.py
tests/: conftest.py  test_e2e.py
tests/integration/: test_app.py  test_e2e.py  test_main.py  test_txt_reader_with_parser.py  test_txt_writer_with_converter.py
tests/unit/: test_cli_parser.py  test_context.py  test_create_app.py
tests/unit/algorithm/: test_create_pair_from_values.py  test_strategies.py  test_strategy_enum.py  test_validation.py
tests/unit/input/: test_parser.py  test_validator.py
tests/unit/output/: test_converter.py
tests/unit/storage/: test_file_type.py  test_txt_converter.py  test_txt_file_reader.py  test_txt_file_writer.py  test_txt_parser.py
