[tool.poetry]
name = "datumo_task"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.8.16"

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
mypy = "^1.0.1"
black = "^23.1.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
Flake8-pyproject = "^1.2.2"
bandit = {extras = ["toml"], version = "^1.7.4"}
pytest-lazy-fixture = "^0.6.3"

[tool.coverage.run]
omit = [
    "tests/*"
]

[tool.flake8]
max-line-length = 120
per-file-ignores = [
    "__init__.py:F401",
]

[tool.bandit]
exclude_dirs = ["tests"]

[tool.black]
exclude = 'tests/unit/algorithm/test_strategies.py'


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
